--- a/ref3-system.bib
+++ b/ref3-system.bib
@@ -12,6 +12,12 @@ pages = {28--35},
 local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/secure-names-bit-strings.pdf}, 
 year = {1997}
 }
+@article{BayerHaber1992, 
+author = {Bayer, Dave and Haber, Stuart}, 
+title = {{Improving the Efficiency and Reliability of Digital Time-Stamping}}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Timestamp_BHS93.pdf}, 
+year = {1992}
+}
 @article{TimeStamp-Haber, 
 author = {Haber, Stuart and Stornetta, W. Scott}, 
 title = {{How to time-stamp a digital document}}, 
