--- a/ref1-intro.bib
+++ b/ref1-intro.bib
@@ -67,7 +67,7 @@ local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for
 year = {2016}, 
 rating = {5}
 }
-@article{undefined, 
+@article{Bitcoin, 
 author = {Nakamoto, Satoshi}, 
 title = {{Bitcoin: A Peer-to-Peer Electronic Cash System}}, 
 url = {www.bitcoin.org}, 
