--- a/ref3-system.bib
+++ b/ref3-system.bib
@@ -1,7 +1,37 @@
+@misc{DSR, 
+author = {}, 
+title = {{Pot: Detailed Documentation}}, 
+url = {\url{https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation},
+}
+@misc{Ethereum, 
+author = {Vitalik Buterin}, 
+title = {{Ethereum: A Next-Generation Smart Contract and Decentralized Application Platform}}, 
+url = {\url{https://ethereum.org/whitepaper/}},
+}
+@misc{Dai, 
+author = {}, 
+title = {{Dai: Detailed Documentation}}, 
+url = {\url{https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation}},
+}
+@misc{Chai, 
+author = {}, 
+title = {{Chai – A simple ERC20 wrapper over the Dai Savings Rate}}, 
+url = {\url{https://chai.money/about.html}},
+}
+@misc{Solidity, 
+author = {}, 
+title = {{Solidity}}, 
+url = {\url{https://solidity.readthedocs.io/en/v0.6.8/}},
+}
+@misc{OZ, 
+author = {}, 
+title = {{OpenZeppelin Library}}, 
+url = {\url{https://github.com/OpenZeppelin/openzeppelin-contracts}},
+}
 @misc{Rinkeby, 
 author = {}, 
 title = {{Rinkeby Ethereum Testnet}}, 
-url = {https://www.rinkeby.io/}
+url = {\url{https://www.rinkeby.io/}},
 }
 @article{Haber-Secure, 
 author = {Haber, Stuart and Stornetta, W. Scott}, 
@@ -66,7 +96,7 @@ author = {Gabizon, Ariel and Williamson, Zachary J.},
 title = {{Proposal: The Turbo-PLONK program syntax for specifying SNARK programs}}, 
 keywords = {privacy,AZTEC protocol,SNARK}, 
 local-url = {file://localhost/Users/bt_neurospin/Downloads/proposal-turbo_plonk.pdf}, 
-rating = {2}
+rating = {2},
 }
 @article{IPFS, 
 author = {Benet, Juan}, 
