--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -47,56 +47,9 @@ Peer-review is a necessary and essential quality control step for scientific pub
 %
 %
 \section{Introduction}
-blockchain for science here and application to open science and to peer review as a specific case
-to cite "" The essence of blockchain is that it allows transactions of value without intermediaries, and can enable decentralised business models." "
+From its birth in 2008 as a distributed ledger for the cryptocurrency bitcoin \cite{Bitcoin}, blockchain technology has  
 
-Dr. Soenke Bartling is a German radiologist and founder of Blockchain for Science2, a think tank based in Berlin. Launched in 2016, its aim is to ‘open up science and knowledge creation by means of the blockchain (r)evolution’. Besides meetings, hackathons3 and stimulating knowledge sharing through its online platform, the organisation also launched and maintains a living document4 on blockchain and science, collecting ideas on how blockchain could open up science and knowledge creation.
-
-\begin{itemize}
-\item reproducibility crisis (a fix)
-\item openness of access and data 
-\item 'blockchainefied science':  "a more flexible, grass-root and reputation-based governance of science."
-\end{itemize}
-reputation metrics -- "blockchain would make much larger parts of the research cycle open to scientific self-correction. This bears the potential to be a new approach to the current reproducibility crisis in science, and could ‘reduce waste and make more research results true’. Beyond that, blockchain could be used to reduce overhead and accelerate the scientific process and incentivise true innovation."
-Decentralized
-Distributed 
-Immutable (’append only database’)
-Transparent (provable to the external world)
-"One such system, the Ethereum blockchain, goes so far as to provide its own programming language to run distributed, unstoppable, and provable applications [27]. This includes smart contracts [28] which can be used to realize distributed, autonomous applications and organizations [29]." they propose permissioned public blockchain for science
-"Figure 3: Large parts of the research cycle can make use of blockchain (yellow arch); only the experiment/initial data collection itself cannot. From data collection onwards, the rest of the research circle would then become immutable, comprehensible, and externally provable. This would make larger parts of the research cycle open to scientific self-correction and may make more research results reproducible, true, and useful."
-
-\begin{itemize} 
-\item scientific ideas/data/lab notebooks via time-stamping and proof of existence - Blockchains provide a ‘notarization’ functionality.
-\item pre-registration in open science, now managed by open platforms like OSF 
-\item The recommendation to reduce waste in science which reads: ‘Public availability of raw data and complete scripts of statistical analysis could be required by journals and funding agencies sponsoring new research’ [5,49] could be realized through blockchain. 
-to prevent vs publication bias (reporting only positive results) or p-hacking or ex-post-facto hypothesizing (changing the hypothesis after having looked into the data)
-\item stress on scientific self-correction: from open data science to blockchain based science 
-\end{itemize}
-
-"Figure 5: In closed science, scientists just publish a description of their research data and results in their final publication (I). Currently, researchers can publish their research data in data repositories, but that leaves no trace of the data collection or handling process (II). Of course, the final repository could be a blockchain based, decentralized database (III). However, blockchain technology could take the whole process one step further: the whole data handling process could take place in a blockchain system and would therefore be provable and open to scientific self-correction (at will) (IV)." 
-Blockchain systems make it possible to publish research anonymously [70] or with a second online identity - and yet one could still get money or other research impact appreciation for it [71,72]
-Science reputation systems can be built using blockchain without a trusted third party. 
-As such, a Decentralized Autonomous Academic Endorsement System has been proposed and interesting implementation ideas and next implementation steps have been disclosed [72].
-Research funding: A DARO (distributed autonomous research organization) allocates and distributes research resources.
-could also engage the public through a more transparent research process. 
-token economy could be applied to scientific ideas and groundbreaking discoveries, we could incentivise scientist to spread ideas early and strongly. This stands in contrast to the current system, which incentivises scientists to remain inert until publication, patent application, etc. It has been claimed that this could also be a solution to the famous innovators dilemma [9
-What should token for science/research projects represent? One thing would be ‘asset-backed’ tokens as described here [96] as a bet on the commercially usable part of the intellectual property. However, is that enough? Couldn't there be tokens that represent a purely scientific value of a research project? Researchers are used to immaterial rewards called “reputation”. For instance, I could place bets (as outlined below on relativity and will receive reputation tokens for properly predicting outcomes. I would also receive “reputation” if my own research results can be validated by “the crowd” or will be used by their future work, i.e. represent the equivalent of citations.)  
-The blockchain revolution is a game changer and hence chances are that this can be used to break with inappropriate cultures. Indeed, blockchain technology could be used to ‘Increase value and reduce waste’ [5], by opening the research cycle to scientific self-control beyond the final publication and might therefore be a fix to the current reproducibility crisis in science. 
-
-Through the blockchain, ownership of content is automatically established, and the use of content and the payment of royalties are executed through smart contracts in which the rights are stored."
-
-commercial landscape in scholarly communication. For example, the platforms allow micropayments t
-New Metrics Research on the blockchain could have a huge impact on the way researchers build their reputation and become recognised.The big advantage of a blockchain for research is that all activities of scientists can be automatically stored.Whenever a researcher uploads data, performs statistical analyses, writes and submits an article or reviews a manuscript, this is automatically tracked and recorded. By working on a blockchain, the risk of fraud is significantly reduced making it significantly easier to collect reliable and complete data on the performance of researchers, research groups and universities.This would allow for more sophisticated as well as reliable metrics to be built on top of that. Moreover, it will allow metrics to be based on activities that are currently not well recognised (e.g., peer review).
-Alternative Economic Models
-A blockchain for research could accompany the introduction of a cryptocurrency, which would add an economic layer to the blockchain. This ‘bitcoin for research’ could be used to make micro payments to publishers for consuming content, and could also introduce a monetary reward scheme to researchers themselves. For example, the blockchain could disintermediate publishers and reward authors directly with cryptocurrencies that can be used to purchase other content or services. It could also introduce rewards for research activities, such as peer review, statistical support, exchange of lab equipment, outsourcing specific research, or the hosting of data. Eventually, initial coin offerings (ICOs12), a form of crowdfunding using cryptocurrencies, could be used to fund entire research projects. In this way, a crypto economy could evolve in science reflecting the value merits of a number of activities.
-
-REWRITE
-An increasing body of voices in the scientific community has started to speak up for the need of updating current scientific practices with the advances represented by blockchain technology [2, 8]. As an example, we refer to a ‘manifesto’ written by a few anonymous authors, proposing a blockchain based system of academic endorsement (AES) [1]. Indeed, we could say that in general “specific blockchain characteristics meet the requirements of an open science infrastructure” [3-7]:
-\paragraph{Decentralisation}Taking out the need of intermediaries, would make useless depending on highly profiting publishing companies for disseminating scientific work and managing the rules of the peer-review process;
-\paragraph{Immutability} of the system in which information can only be appended with tamper proof-time stamping,  but not subsequently modified, would secure the intellectual property and a fairer measure of the scientific contribution of the actors at play during the multiple versions of a paper;
-\paragraph{Transparency} (meaning that we have a viewable record of all the papers and peer-reviews), would also make editorial decisions (publish or not publish a study) more transparent and democratic. Finally, cryptographic hashing could allow for a double-blind process that reduces human biases in judgement by assigning hashed pseudonymous to universal researcher identifiers. From all these aspects taken together, a more democratic open peer-review  process could rise, in which merit and power (of access to information, of decision…) is more equally redistributed among the stakeholders (researchers, reviewers, taxpayers).
-
- The paper is structured as follows. Sections 2 presents research background and related works. Section 3 explains the proposed Ethereum-based protocol illustrating the system architecture and the current status of implementation. In Sect. 4 we discuss the implication of our work. Section 5 contains the conclusions. Appendixes present the smart contracts. 
+The paper is structured as follows. Sections 2 presents research background and related works. Section 3 explains the proposed Ethereum-based protocol illustrating the system architecture and the current status of implementation. In Sect. 4 we discuss the implication of our work. Section 5 contains the conclusions. Appendixes present the smart contracts. 
 
 \section{Background}
 \subsection{Peer-review: a flawed and outdated system}
